fix font sizes and alignment

--- a/frontend/src/scenes/events/definitions/VolumeTable.scss
+++ b/frontend/src/scenes/events/definitions/VolumeTable.scss
@@ -34,6 +34,7 @@
     flex-direction: row;
     justify-content: space-evenly;
     margin-top: 30px;
+    text-align: center;
 
     .ant-typography {
         margin-bottom: 0;
